# gd32f4_rs_test

./: Cargo.toml  compile_binary.sh  flash_binary.sh  memory.x
.cargo/: config.toml
.zed/: settings.json
src/: lib.rs
src/std_periph/: rcu.rs
